services/nw-policies/ingress/nginx-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-allow
spec:
  podSelector:
    matchLabels:
      app: nginx
      role: web
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: test
